added more code

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -337,6 +337,8 @@ header .mobile {
   width: 100%;
   display: inline-grid;
   grid-template-columns: repeat(4, 1fr);
+  place-content: center;
+  place-items: center;
 }
 #filters-section .images-container .image-container img {
   width: 100%;
